[tool.poetry]
name = "playwright-rep"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorokin <sorokin.dm@promail366.com>"]
readme = "README.md"
packages = [{include = "playwright_rep"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
